--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>Xinyu Shen</title>
-    <!-- <script defer="defer" src="/static/js/main.6d940d7c.js"></script>
-    <link href="/static/css/main.e8f1b81a.css" rel="stylesheet" /> -->
+    <script defer="defer" src="/static/js/main.51f40aef.js"></script>
+    <link href="/static/css/main.fb684077.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
