--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+<script src="https://kit.fontawesome.com/446fd505bc.js" crossorigin="anonymous"></script>
     <title>Xinyu Portfolio</title>
   </head>
   <body>
